--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,387 +1,59 @@
-const API_URL = 'https://centrodecompra-backend.onrender.com'; // Use 'http://localhost:10000' para testes locais
-
-// Variáveis globais
-let produtos = [];
-let categoriaSelecionada = 'todas';
-let lojaSelecionada = 'todas';
-let termoBusca = '';
-let currentImages = [];
-let currentImageIndex = 0;
-let currentPage = 1;
-const produtosPorPagina = 20;
-const totalProdutos = 1000;
-
-// Atualizar ano no footer
-function atualizarAnoFooter() {
-  const yearElement = document.getElementById('year');
-  if (yearElement) {
-    yearElement.textContent = new Date().getFullYear();
-  }
-}
-
-// Detectar triplo clique no logotipo
-function configurarCliqueLogo() {
-  const logo = document.getElementById('site-logo-img'); // Corrigido para o ID correto
-  if (!logo) {
-    console.error('ID site-logo-img não encontrado no DOM');
-    return;
-  }
-  let clickCount = 0;
-  let clickTimer;
-  logo.addEventListener('click', (e) => {
-    e.preventDefault();
-    clickCount++;
-    console.log(`Clique detectado: ${clickCount}`);
-    if (clickCount === 1) {
-      clickTimer = setTimeout(() => {
-        clickCount = 0;
-        console.log('Contagem de cliques resetada');
-      }, 500);
-    } else if (clickCount === 3) {
-      clearTimeout(clickTimer);
-      console.log('Triplo clique detectado, redirecionando para admin-xyz-123.html');
-      window.location.href = '/admin-xyz-123.html';
-      clickCount = 0;
-    }
-  }, { once: false });
-}
-
-// Carregar produtos com retry
-async function carregarProdutos() {
-  const loadingSpinner = document.getElementById('loading-spinner');
-  const mensagemVazia = document.getElementById('mensagem-vazia');
-  const errorMessage = document.getElementById('error-message');
-  const gridProdutos = document.getElementById('grid-produtos');
-
-  if (!gridProdutos || !mensagemVazia || !errorMessage || !loadingSpinner) {
-    console.error('Elementos essenciais (grid-produtos, mensagem-vazia, error-message, loading-spinner) não encontrados');
-    return;
-  }
-
-  const maxRetries = 3;
-  let attempt = 1;
-
-  while (attempt <= maxRetries) {
-    try {
-      loadingSpinner.style.display = 'block';
-      mensagemVazia.style.display = 'none';
-      errorMessage.style.display = 'none';
-      gridProdutos.innerHTML = '';
-
-      console.log(`Tentativa ${attempt}: Carregando produtos de ${API_URL}/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`);
-      const response = await fetch(
-        `${API_URL}/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`,
-        { cache: 'no-store' }
-      );
-      if (!response.ok) {
-        const errorData = await response.json().catch(() => ({}));
-        throw new Error(errorData.details || `Erro ${response.status}`);
-      }
-      produtos = await response.json();
-
-      if (!Array.isArray(produtos)) {
-        throw new Error('Resposta inválida da API: não é um array');
-      }
-
-      console.log(`Produtos recebidos: ${produtos.length}`);
-      filtrarProdutos();
-      atualizarPaginacao();
-      return;
-    } catch (error) {
-      console.error(`⚠️ Tentativa ${attempt} falhou: ${error.message}`);
-      if (attempt === maxRetries) {
-        errorMessage.textContent = `Erro ao carregar produtos após ${maxRetries} tentativas: ${error.message}.`;
-        errorMessage.style.display = 'block';
-        mensagemVazia.style.display = 'none';
-        gridProdutos.style.display = 'none';
-      }
-      attempt++;
-      await new Promise(resolve => setTimeout(resolve, 1000 * attempt));
-    } finally {
-      loadingSpinner.style.display = 'none';
-    }
-  }
-}
-
-// Filtrar e exibir produtos
-function filtrarProdutos() {
-  const gridProdutos = document.getElementById('grid-produtos');
-  const mensagemVazia = document.getElementById('mensagem-vazia');
-
-  if (!gridProdutos || !mensagemVazia) {
-    console.error('grid-produtos ou mensagem-vazia não encontrados');
-    return;
-  }
-
-  const produtosFiltrados = produtos.filter((produto) => {
-    const matchCategoria =
-      categoriaSelecionada === 'todas' ||
-      produto.categoria?.toLowerCase() === categoriaSelecionada.toLowerCase();
-    const matchLoja =
-      lojaSelecionada === 'todas' ||
-      produto.loja?.toLowerCase() === lojaSelecionada.toLowerCase();
-    const matchBusca =
-      !termoBusca || produto.nome?.toLowerCase().includes(termoBusca.toLowerCase());
-    return matchCategoria && matchLoja && matchBusca;
-  });
-
-  gridProdutos.innerHTML = '';
-  if (produtosFiltrados.length === 0) {
-    mensagemVazia.style.display = 'block';
-    gridProdutos.style.display = 'none';
-    console.log('Nenhum produto filtrado encontrado');
-    return;
-  }
-
-  mensagemVazia.style.display = 'none';
-  gridProdutos.style.display = 'grid';
-
-  produtosFiltrados.forEach((produto, produtoIndex) => {
-    const imagens = Array.isArray(produto.imagens) && produto.imagens.length > 0
-      ? produto.imagens.filter(img => typeof img === 'string' && img)
-      : ['imagens/placeholder.jpg'];
-    const carrosselId = `carrossel-${produtoIndex}-${produto.id || Date.now()}`; // Corrigido
-
-    const produtoDiv = document.createElement('div');
-    produtoDiv.classList.add('produto-card', 'visible');
-    produtoDiv.setAttribute('data-categoria', produto.categoria?.toLowerCase() || 'todas');
-    produtoDiv.setAttribute('data-loja', produto.loja?.toLowerCase() || 'todas');
-
-    produtoDiv.innerHTML = `
-      <div class="carrossel" id="${carrosselId}">
-        <div class="carrossel-imagens">
-          ${imagens.map((img, i) => `
-            <img src="${img}" alt="${produto.nome || 'Produto'} ${i + 1}" loading="lazy" width="200" height="200" onerror="this.src='imagens/placeholder.jpg'" onclick="openModal(${produtoIndex}, ${i})">
-          `).join('')}
-        </div>
-        ${imagens.length > 1 ? `
-          <button class="carrossel-prev" onclick="moveCarrossel('${carrosselId}', -1)">◄</button>
-          <button class="carrossel-next" onclick="moveCarrossel('${carrosselId}', 1)">▶</button>
-          <div class="carrossel-dots">
-            ${imagens.map((_, i) => `<span class="carrossel-dot ${i === 0 ? 'ativo' : ''}" onclick="setCarrosselImage('${carrosselId}', ${i})"></span>`).join('')}
-          </div>
-        ` : ''}
-      </div>
-      <span>${produto.nome || 'Produto sem nome'}</span>
-      <span class="descricao">Loja: ${produto.loja || 'Desconhecida'}</span>
-      <p class="preco"><a href="${produto.link || '#'}" target="_blank" class="ver-preco">Clique aqui para ver o preço</a></p>
-      <a href="${produto.link || '#'}" target="_blank" class="ver-na-loja ${produto.loja?.toLowerCase() || 'default'}">Comprar</a>
-    `;
-    gridProdutos.appendChild(produtoDiv);
-  });
-  console.log(`Exibidos ${produtosFiltrados.length} produtos`);
-}
-
-// Funções do carrossel
-function moveCarrossel(carrosselId, direction) {
-  const carrossel = document.getElementById(carrosselId);
-  if (!carrossel) return;
-  const imagens = carrossel.querySelector('.carrossel-imagens');
-  const dots = carrossel.querySelectorAll('.carrossel-dot');
-  let currentIndex = parseInt(imagens.dataset.index || 0);
-  const totalImagens = imagens.children.length;
-
-  currentIndex = (currentIndex + direction + totalImagens) % totalImagens;
-  requestAnimationFrame(() => {
-    imagens.style.transform = `translateX(-${currentIndex * 100}%)`; // Corrigido
-    imagens.dataset.index = currentIndex;
-    dots.forEach((dot, i) => dot.classList.toggle('ativo', i === currentIndex));
-  });
-}
-
-function setCarrosselImage(carrosselId, index) {
-  const carrossel = document.getElementById(carrosselId);
-  if (!carrossel) return;
-  const imagens = carrossel.querySelector('.carrossel-imagens');
-  const dots = carrossel.querySelectorAll('.carrossel-dot');
-
-  requestAnimationFrame(() => {
-    imagens.style.transform = `translateX(-${index * 100}%)`; // Corrigido
-    imagens.dataset.index = index;
-    dots.forEach((dot, i) => dot.classList.toggle('ativo', i === index));
-  });
-}
-
-// Funções do modal
-async function openModal(produtoIndex, imageIndex) {
-  const modal = document.getElementById('imageModal');
-  const carrosselImagens = document.getElementById('modalCarrosselImagens');
-  const carrosselDots = document.getElementById('modalCarrosselDots');
-
-  try {
-    currentImages = Array.isArray(produtos[produtoIndex]?.imagens) && produtos[produtoIndex].imagens.length > 0
-      ? produtos[produtoIndex].imagens.filter(img => typeof img === 'string' && img)
-      : ['imagens/placeholder.jpg'];
-    currentImageIndex = imageIndex;
-
-    console.log('🔍 Abrindo modal:', { produtoIndex, imageIndex, imagens: currentImages });
-
-    const validImages = await Promise.all(currentImages.map(img => {
-      return new Promise(resolve => {
-        const testImg = new Image();
-        testImg.src = img;
-        testImg.onload = () => resolve(img);
-        testImg.onerror = () => resolve('imagens/placeholder.jpg');
-      });
-    }));
-    currentImages = validImages;
-
-    carrosselImagens.innerHTML = currentImages.map((img, i) => `
-      <img src="${img}" alt="Imagem ${i + 1}" class="modal-image" loading="lazy" width="600" height="600" onerror="this.src='imagens/placeholder.jpg'">
-    `).join('');
-
-    requestAnimationFrame(() => {
-      carrosselImagens.style.width = '100%';
-      carrosselImagens.style.display = 'flex';
-      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
-
-      const imagens = carrosselImagens.querySelectorAll('img');
-      imagens.forEach(img => {
-        img.style.width = '100%';
-        img.style.flex = '0 0 100%';
-        img.style.objectFit = 'contain';
-      });
-    });
-
-    carrosselDots.innerHTML = currentImages.map((_, i) => `
-      <span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>
-    `).join('');
-
-    modal.style.display = 'flex';
-  } catch (error) {
-    console.error('Erro ao abrir modal:', error);
-  }
-}
-
-function moveModalCarrossel(direction) {
-  const carrosselImagens = document.getElementById('modalCarrosselImagens');
-  const carrosselDots = document.getElementById('modalCarrosselDots')?.children;
-  const totalImagens = currentImages.length;
-
-  currentImageIndex = (currentImageIndex + direction + totalImagens) % totalImagens;
-  requestAnimationFrame(() => {
-    carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`; // Corrigido
-    Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
-  });
-}
-
-function setModalCarrosselImage(index) {
-  const carrosselImagens = document.getElementById('modalCarrosselImagens');
-  const carrosselDots = document.getElementById('modalCarrosselDots')?.children;
-  currentImageIndex = index;
-  requestAnimationFrame(() => {
-    carrosselImagens.style.transform = `translateX(-${index * 100}%)`; // Corrigido
-    Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
-  });
-}
-
-function closeModal() {
-  const modal = document.getElementById('imageModal');
-  modal.style.display = 'none';
-  currentImages = [];
-  currentImageIndex = 0;
-}
-
-// Configurar busca com debounce
-function configurarBusca() {
-  const inputBusca = document.getElementById('busca');
-  const buscaFeedback = document.getElementById('busca-feedback');
-  let debounceTimer;
-
-  if (!inputBusca || !buscaFeedback) {
-    console.error('Elementos de busca não encontrados');
-    return;
-  }
-
-  inputBusca.addEventListener('input', () => {
-    clearTimeout(debounceTimer);
-    termoBusca = inputBusca.value.trim();
-
-    if (termoBusca) {
-      buscaFeedback.style.display = 'block';
-      buscaFeedback.textContent = `Buscando por "${termoBusca}"...`;
-    } else {
-      buscaFeedback.style.display = 'none';
-    }
-
-    currentPage = 1;
-    debounceTimer = setTimeout(() => carregarProdutos(), 300);
-  });
-}
-
-// Configurar paginação
-function configurarPaginacao() {
-  const prevButton = document.getElementById('prev-page');
-  const nextButton = document.getElementById('next-page');
-
-  if (!prevButton || !nextButton) {
-    console.error('Botões de paginação não encontrados');
-    return;
-  }
-
-  prevButton.addEventListener('click', () => {
-    if (currentPage > 1) {
-      currentPage--;
-      carregarProdutos();
-    }
-  });
-
-  nextButton.addEventListener('click', () => {
-    if (currentPage < Math.ceil(totalProdutos / produtosPorPagina)) {
-      currentPage++;
-      carregarProdutos();
-    }
-  });
-}
-
-function atualizarPaginacao() {
-  const prevButton = document.getElementById('prev-page');
-  const nextButton = document.getElementById('next-page');
-  const pageInfo = document.getElementById('page-info');
-
-  if (!prevButton || !nextButton || !pageInfo) {
-    console.error('Elementos de paginação não encontrados');
-    return;
-  }
-
-  prevButton.disabled = currentPage === 1;
-  nextButton.disabled = currentPage >= Math.ceil(totalProdutos / produtosPorPagina);
-  pageInfo.textContent = `Página ${currentPage} de ${Math.ceil(totalProdutos / produtosPorPagina)}`; // Corrigido
-}
-
-// Filtrar por categoria
-function filtrarPorCategoria(categoria) {
-  categoriaSelecionada = categoria;
-  currentPage = 1;
-  document.querySelectorAll('.categoria-item').forEach(item => {
-    item.classList.toggle('ativa', item.dataset.categoria.toLowerCase() === categoria.toLowerCase());
-  });
-  carregarProdutos();
-}
-
-// Filtrar por loja
-function filtrarPorLoja(loja) {
-  lojaSelecionada = loja;
-  currentPage = 1;
-  document.querySelectorAll('.loja, .loja-todas').forEach(item => {
-    item.classList.toggle('ativa', item.dataset.loja.toLowerCase() === loja.toLowerCase());
-  });
-  carregarProdutos();
-}
-
-// Inicialização
-document.addEventListener('DOMContentLoaded', () => {
-  console.log('Inicializando página');
-  carregarProdutos();
-  configurarBusca();
-  configurarPaginacao();
-  atualizarAnoFooter();
-  configurarCliqueLogo();
-
-  const modal = document.getElementById('imageModal');
-  if (modal) {
-    modal.addEventListener('click', (e) => {
-      if (e.target === e.currentTarget) closeModal();
-    });
-  }
-});
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Admin - Centro de Compras</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="index.html"><img src="logos/centrodecompras.jpg" alt="Centro de Compras"></a>
+    </div>
+    <div class="header-text">
+      <h1>Admin - Centro de Compras</h1>
+      <p>Gerencie os produtos do portal.</p>
+    </div>
+  </header>
+  <div class="admin-container">
+    <h2>Adicionar Produto</h2>
+    <form id="add-product-form">
+      <label for="nome">Nome:</label><input type="text" id="nome" required>
+      <label for="idProduto">ID do Produto:</label><input type="text" id="idProduto" required>
+      <label for="descricao">Descrição:</label><textarea id="descricao" required></textarea>
+      <label for="categoria">Categoria:</label>
+      <select id="categoria" required>
+        <option value="eletronicos">Eletrônicos</option>
+        <option value="moda">Moda</option>
+        <option value="fitness">Fitness</option>
+        <option value="casa">Casa e Decoração</option>
+        <option value="beleza">Beleza</option>
+        <option value="esportes">Esportes</option>
+        <option value="livros">Livros</option>
+        <option value="infantil">Infantil</option>
+        <option value="Celulares">Celulares</option>
+        <option value="Eletrodomésticos">Eletrodomésticos</option>
+      </select>
+      <label for="loja">Loja:</label>
+      <select id="loja" required>
+        <option value="amazon">Amazon</option>
+        <option value="magalu">Magalu</option>
+        <option value="shein">Shein</option>
+        <option value="shopee">Shopee</option>
+        <option value="mercadolivre">Mercado Livre</option>
+        <option value="alibaba">Alibaba</option>
+      </select>
+      <label for="link">Link do Produto:</label><input type="url" id="link" required>
+      <label for="preco">Preço (R$):</label><input type="number" id="preco" step="0.01" required>
+      <label for="images">Imagens:</label><input type="file" id="images" multiple accept="image/*">
+      <button type="submit">Adicionar Produto</button>
+    </form>
+  </div>
+  <footer>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
