--- a/index.html
+++ b/index.html
@@ -3,48 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
-  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba.">
+  <meta property="og:title" content="Centro de Compras - Ofertas">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas confiáveis com links de afiliados seguros.">
   <meta property="og:image" content="logos/centrodecompras.jpg">
-  <meta property="og:url" content="https://centrodecompra.com.br/">
+  <meta property="og:url" content="https://www.centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="preload" href="logos/centrodecompras.jpg" as="image">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
 </head>
 <body>
   <header class="site-header">
     <div class="logo-container">
-      <a href="#">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo">
+      <a href="index.html">
+        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
       <h1>Centro de Compras</h1>
-      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
+      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
     </div>
   </header>
 
   <nav>
     <a href="index.html">Promoções</a>
-    <a href="cupom.html">Cupom de desconto</a>
+    <a href="cupom.html">Cupom de Desconto</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
   </nav>
 
   <div class="container">
-    <aside class="sidebar-categorias">
+    <aside class="sidebar">
       <h3>Categorias</h3>
       <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas as Categorias</li>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</li>
         <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
         <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
         <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa e Decoração</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</li>
         <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</li>
         <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</li>
         <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</li>
@@ -55,83 +55,64 @@
     </aside>
 
     <main>
-      <section id="ofertas-section">
-        <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+      <section>
+        <h2>🛍️ Ofertas do Dia</h2>
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
-            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')">
-              <span>Todas as Lojas</span>
-            </div>
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
-              <span class="amazon">Amazon</span>
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
-              <span class="magalu">Magalu</span>
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
-              <span class="shein">Shein</span>
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
-              <span class="shopee">Shopee</span>
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
-              <span class="mercadolivre">Mercado Livre</span>
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
-              <span class="alibaba">Alibaba</span>
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
             </div>
           </div>
         </div>
         <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-lojas" id="grid-produtos"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-        <p class="error-message" id="error-message" style="display: none;">></p>
-        <div id="paginacao" class="paginacao">
-            <button id="prev-page" disabled>Anterior</button>
-            <span id="page-info">Página 1</span>
-            <button id="next-page">Próxima</button>
-          </div>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+        <div class="paginacao" id="paginacao">
+          <button id="prev-page" disabled>Anterior</button>
+          <span id="page-info">Página 1</span>
+          <button id="next-page">Próxima</button>
         </div>
       </section>
-
-      <a href="whatsapp" class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
-      <a href="#https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
-      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
-
       <div class="social-links">
-      <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH?_r=1" target="_blank">
-        <a target="_blank"> target="_blank">
-          <div class="icon"><img src="logos/tiktok.jpg" alt="TikTok" loading="lazy"></div>
+        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/tiktok.jpg" alt="TikTok" loading="lazy" width="40" height="40"></div>
           <span>TikTok</span>
-        </span>TikTok</span>
         </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
-        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&utm_source=qr&target="_blank">
-          <div class="icon"><img src="logos/instagram.png" alt="Instagram" loading="lazy" alt="Instagram"></div>
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/instagram.jpg" alt="Instagram" loading="lazy" width="40" height="40"></div>
           <span>Instagram</span>
-        </span>
         </a>
-        <a href="https://x.com/ComprasCdc" target="_blank">
-          <a href="https://x.com/ComprasCdc" target="_blank">
-            <div class="icon"><img src="logos/x.png" alt="X" loading="lazy"></div>
-            <span>X</span>
-          </div>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/x.png" alt="X" loading="lazy" width="40" height="40"></div>
+          <span>X</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy"></div>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
           <span>YouTube</span>
         </a>
       </div>
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
     </main>
   </div>
 
@@ -146,16 +127,16 @@
   </div>
 
   <footer>
-    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"></strong> © <span id="year"></span></p>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
   </footer>
 
   <div class="robo-assistente">
-    <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy">
+    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
 
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
